...
                                .clickable { onPlayPause() },
                            contentAlignment = Alignment.Center
                        ) {
                            val (icon, description) = if (isPlaying) {
                                R.drawable.ic_pause to "Pause"
                            } else {
                                R.drawable.ic_play to "Play"
                            }

                            AnimatedContent(targetState = isPlaying) {
                                Icon(
                                    painter = painterResource(icon),
                                    contentDescription = description,
...
            IconButton(
                onClick = onSeekBackward,
                modifier = Modifier.size(56.dp)
            ) {
                Image(
                    painter = painterResource(R.drawable.backward_speed_icon),
                    contentDescription = "Seek backward 15 seconds",
                    colorFilter = ColorFilter.tint(MaterialTheme.colorScheme.onSurface),
                    modifier = Modifier.size(36.dp)
                )
            }

            val (icon, description) = if (isPlaying) {
...
            IconButton(
                onClick = onSeekForward,
                modifier = Modifier.size(56.dp)
            ) {
                Image(
                    painter = painterResource(R.drawable.forward_speed_icon),
                    contentDescription = "Seek forward 15 seconds",
                    colorFilter = ColorFilter.tint(MaterialTheme.colorScheme.onSurface),
                    modifier = Modifier.size(36.dp)
                )
            }

        }
...
